# accountings_dynamodb

./: README.md  create_table.py  init_ddb_backup.sh  pyproject.toml
