[tool.poetry]
name = "accountings-dynamodb"
version = "0.1.0"
description = ""
authors = ["franckeni <franckafosoule@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.24"
boto3-stubs = "^1.35.24"
mypy-boto3-dynamodb = "^1.35.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
